--- a/contacts.html
+++ b/contacts.html
@@ -119,7 +119,8 @@
           </div>
           <ul class="nav__social-list--desktop nav__social-list--svg">
             <li class="nav__social-item">
-              <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+              <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                rel="noopener noreferrer">
                 <svg class="link-social--svg" width="25" height="25">
                   <use xlink:href="#facebook"></use>
                 </svg>
@@ -127,7 +128,7 @@
             </li>
             <li class="nav__social-item">
               <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-                class="link-social link--hover">
+                class="link-social link--hover" target="_blank" rel="noopener noreferrer">
                 <svg class="link-social--svg" width="25" height="25">
                   <use xlink:href="#location"></use>
                 </svg>
@@ -163,9 +164,11 @@
                 <a href="about-us.html" class="link-hover" data-lang="nav_page-2"></a>
               </li>
               <li class="nav__item">
-                <a href="contacts.html" class=" link--active" data-lang="nav_page-3"></a>
+                <a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
               </li>
-              <li class="nav__item">
+
+
+              <li class="nav__item nav__item-dropdown">
                 <a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
                 <div class="dropdown">
                   <a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
@@ -175,7 +178,7 @@
 
                 </div>
               </li>
-              <li class="nav__item">
+              <li class="nav__item nav__item-dropdown">
                 <a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
                 <div class="dropdown dropdown--width">
                   <a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
@@ -186,6 +189,9 @@
                   <a href="mechanical-processing.html" class="link__dropdown link-hover"
                     data-lang="footer_page-11-1"></a>
                 </div>
+              </li>
+              <li class="nav__item">
+                <a href="news.html" class="link-hover" data-lang="nav_page-9"></a>
               </li>
 
             </ul>
@@ -208,7 +214,8 @@
                 </a>
               </li>
               <li class="nav__item-social">
-                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                  rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
@@ -217,7 +224,7 @@
               </li>
               <li class="nav__item-social">
                 <a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-                  class="link-social link--hover">
+                  class="link-social link--hover" target="_blank" rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="30">
                     <use xlink:href="#location"></use>
                   </svg>
@@ -291,32 +298,32 @@
           <div class="c-calculation__content">
             <div class="c-calculation__block">
               <p class="c-calculation__title" data-lang="c-header_page-6"></p>
-              <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
+              <!-- <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
                 +38 (096) 123 91 21
-              </a>
-              <a href="mailto:lazerarmax@gmail.com" class="link-social link--hover c-calculation__text">
+              </a> -->
+              <a href="mailto:armaxofis@gmail.com" class="link-social link--hover c-calculation__text">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
-                armax.km@gmail.com
+                armaxofis@gmail.com
               </a>
             </div>
             <div class="c-calculation__block">
               <p class="c-calculation__title" data-lang="c-header_page-7"></p>
-              <a class="link-social link--hover c-calculation__text" href="tel:+380961239121">
+              <a class="link-social link--hover c-calculation__text" href="tel:+380664688669">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#phone"></use>
                 </svg>
-                +38 (096) 123 91 21
+                +38 (066) 468 86 69
               </a>
-              <a href="mailto:lazerarmax@gmail.com" class="link-social link--hover c-calculation__text">
+              <a href="mailto:armax.oblik@gmail.com" class="link-social link--hover c-calculation__text">
                 <svg class="link-social--svg" width="30" height="20">
                   <use xlink:href="#mail"></use>
                 </svg>
-                armax.km@gmail.com
+                armax.oblik@gmail.com
               </a>
             </div>
             <div class="c-calculation__block">
@@ -368,6 +375,12 @@
               <li class="info__item">
                 <a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
               </li>
+              <li class="info__item">
+                <a class="info__link" href="news.html" data-lang="footer_page-15"></a>
+              </li>
+              <li class="info__item">
+                <a class="info__link" href="product.html" data-lang="footer_page-16"></a>
+              </li>
 
             </ul>
           </div>
@@ -389,6 +402,9 @@
               <li class="info__item">
                 <a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
               </li>
+              <li class="info__item">
+                <a href="mechanical-processing.html" class="info__link" data-lang="footer_page-17"></a>
+              </li>
             </ul>
           </div>
           <div class="info__block info__address">
@@ -396,7 +412,7 @@
             <ul class="info__list">
               <li class="info__item">
                 <a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-                  class="link-social link--hover" data-lang="footer_page-12">
+                  class="link-social link--hover" data-lang="footer_page-12" target="_blank" rel="noopener noreferrer">
 
                 </a>
                 <svg class="link-social--svg" width="30" height="30">
@@ -441,11 +457,21 @@
                 </a>
               </li>
               <li class="info__item">
-                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+                <a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+                  rel="noopener noreferrer">
                   <svg class="link-social--svg" width="30" height="20">
                     <use xlink:href="#facebook"></use>
                   </svg>
                   facebook.com/armaxMG/
+                </a>
+              </li>
+              <li class="info__item">
+                <a href="https://www.instagram.com/armax.mg?igsh=aWJ0ZnE2MGkxNThj" class="link-social link--hover"
+                  target="_blank" rel="noopener noreferrer">
+                  <svg class="link-social--svg" width="25" height="25">
+                    <use xlink:href="#instagram"></use>
+                  </svg>
+                  instagram.com/armax.mg
                 </a>
               </li>
             </ul>
@@ -454,12 +480,8 @@
       </div>
     </div>
   </footer>
-
-
-  <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="js/index.js"></script>
-  <script src="js/swiper.js"></script>
   <script src="js/lang.js"></script>
   <script src="js/app.js"></script>
 </body>
