--- a/dyeing.html
+++ b/dyeing.html
@@ -325,7 +325,8 @@
 					</div>
 					<ul class="nav__social-list--desktop nav__social-list--svg">
 						<li class="nav__social-item">
-							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+								rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#facebook"></use>
 								</svg>
@@ -333,7 +334,7 @@
 						</li>
 						<li class="nav__social-item">
 							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-								class="link-social link--hover">
+								class="link-social link--hover" target="_blank" rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#location"></use>
 								</svg>
@@ -372,7 +373,7 @@
 							</li>
 
 
-							<li class="nav__item">
+							<li class="nav__item nav__item-dropdown">
 								<a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
 								<div class="dropdown">
 									<a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
@@ -382,8 +383,8 @@
 
 								</div>
 							</li>
-							<li class="nav__item">
-								<a href="services.html" class="link--active" data-lang="nav_page-1"></a>
+							<li class="nav__item nav__item-dropdown">
+								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
 								<div class="dropdown dropdown--width">
 									<a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
 									<a href="sheet-bending.html" class="link__dropdown link-hover" data-lang="footer_page-7-1"></a>
@@ -394,6 +395,10 @@
 										data-lang="footer_page-11-1"></a>
 								</div>
 							</li>
+							<li class="nav__item">
+								<a href="news.html" class="link-hover" data-lang="nav_page-9"></a>
+							</li>
+
 						</ul>
 
 						<ul class="nav__list nav__list-social">
@@ -414,7 +419,8 @@
 								</a>
 							</li>
 							<li class="nav__item-social">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
@@ -423,7 +429,7 @@
 							</li>
 							<li class="nav__item-social">
 								<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-									class="link-social link--hover">
+									class="link-social link--hover" target="_blank" rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="30">
 										<use xlink:href="#location"></use>
 									</svg>
@@ -701,6 +707,12 @@
 							<li class="info__item">
 								<a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
 							</li>
+							<li class="info__item">
+								<a class="info__link" href="news.html" data-lang="footer_page-15"></a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="product.html" data-lang="footer_page-16"></a>
+							</li>
 
 						</ul>
 					</div>
@@ -722,6 +734,9 @@
 							<li class="info__item">
 								<a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
 							</li>
+							<li class="info__item">
+								<a href="mechanical-processing.html" class="info__link" data-lang="footer_page-17"></a>
+							</li>
 						</ul>
 					</div>
 					<div class="info__block info__address">
@@ -729,7 +744,7 @@
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-									class="link-social link--hover" data-lang="footer_page-12">
+									class="link-social link--hover" data-lang="footer_page-12" target="_blank" rel="noopener noreferrer">
 
 								</a>
 								<svg class="link-social--svg" width="30" height="30">
@@ -774,11 +789,21 @@
 								</a>
 							</li>
 							<li class="info__item">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
 									facebook.com/armaxMG/
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="https://www.instagram.com/armax.mg?igsh=aWJ0ZnE2MGkxNThj" class="link-social link--hover"
+									target="_blank" rel="noopener noreferrer">
+									<svg class="link-social--svg" width="25" height="25">
+										<use xlink:href="#instagram"></use>
+									</svg>
+									instagram.com/armax.mg
 								</a>
 							</li>
 						</ul>
@@ -787,11 +812,9 @@
 			</div>
 		</div>
 	</footer>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
 	<script src="js/lang.js"></script>
-	<script src="js/swiper.js"></script>
 	<script src="js/fslightbox.js"></script>
 	<script src="js/app.js"></script>
 </body>
