--- a/сustom-orders.html
+++ b/сustom-orders.html
@@ -14,7 +14,10 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" />
 	<link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
 	<link rel="website icon" type="png" href="../img/pngegg.png" />
-
+	<meta property="og:title" content="ArmaxMG">
+	<meta property="og:image" content="../img/lazer.jpg">
+	<meta property="og:url" content="https://armax-mg.com.ua/">
+	<meta property="og:type" content="website">
 </head>
 
 <body>
@@ -113,7 +116,8 @@
 					</div>
 					<ul class="nav__social-list--desktop nav__social-list--svg">
 						<li class="nav__social-item">
-							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+							<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+								rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#facebook"></use>
 								</svg>
@@ -121,7 +125,7 @@
 						</li>
 						<li class="nav__social-item">
 							<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-								class="link-social link--hover">
+								class="link-social link--hover" target="_blank" rel="noopener noreferrer">
 								<svg class="link-social--svg" width="25" height="25">
 									<use xlink:href="#location"></use>
 								</svg>
@@ -160,8 +164,10 @@
 							<li class="nav__item">
 								<a href="contacts.html" class="link-hover" data-lang="nav_page-3"></a>
 							</li>
-							<li class="nav__item">
-								<a href="product.html" class=" link--active nav__item-link" data-lang="nav_page-4"></a>
+
+
+							<li class="nav__item nav__item-dropdown">
+								<a href="product.html" class="link-hover nav__item-link" data-lang="nav_page-4"></a>
 								<div class="dropdown">
 									<a href="ag-equipment.html" class="link__dropdown link-hover " data-lang="nav_page-5"></a>
 									<a href="furniture-elements.html" class="link__dropdown link-hover" data-lang="nav_page-6"></a>
@@ -170,7 +176,7 @@
 
 								</div>
 							</li>
-							<li class="nav__item">
+							<li class="nav__item nav__item-dropdown">
 								<a href="services.html" class="link-hover" data-lang="nav_page-1"></a>
 								<div class="dropdown dropdown--width">
 									<a href="lazer.html" class="link__dropdown link-hover " data-lang="footer_page-6-1"></a>
@@ -181,6 +187,9 @@
 									<a href="mechanical-processing.html" class="link__dropdown link-hover"
 										data-lang="footer_page-11-1"></a>
 								</div>
+							</li>
+							<li class="nav__item">
+								<a href="news.html" class="link-hover" data-lang="nav_page-9"></a>
 							</li>
 
 						</ul>
@@ -203,7 +212,8 @@
 								</a>
 							</li>
 							<li class="nav__item-social">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
@@ -212,7 +222,7 @@
 							</li>
 							<li class="nav__item-social">
 								<a href="https://www.google.com/maps/place/%D0%A2%D0%B7%D0%9E%D0%92,+%D0%90%D1%80%D0%BC%D0%B0%D0%BA%D1%81+%D0%9C%D0%93/@50.83233,25.453636,18z/data=!4m5!3m4!1s0x0:0x3edf65d8017ef30a!8m2!3d50.8324517!4d25.4532672?hl=uk"
-									class="link-social link--hover">
+									class="link-social link--hover" target="_blank" rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="30">
 										<use xlink:href="#location"></use>
 									</svg>
@@ -234,348 +244,6 @@
 	</header>
 
 	<main class="main">
-		<div class="container">
-			<div class="bucket">
-				<h2 class="section__title"><a href="#" class="section__link">Для фронтальних навантужувачів</a></h2>
-				<section>
-					<div class="swiper swiper__product mySwiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-01</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-02</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-03</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-04</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-05</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<img src="img/arow-prev.svg" alt="prev" width="30" height="50" />
-						</div>
-						<div class="swiper-button-next">
-							<img src="img/arow-next.svg" alt="next" width="30" height="50" />
-						</div>
-					</div>
-				</section>
-			</div>
-			<div class="bucket">
-				<h2 class="section__title"><a href="#" class="section__link">Для ескаваторів</a></h2>
-				<section>
-					<div class="swiper swiper__product mySwiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-01</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-02</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-03</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-04</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-05</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<img src="img/arow-prev.svg" alt="prev" width="30" height="50" />
-						</div>
-						<div class="swiper-button-next">
-							<img src="img/arow-next.svg" alt="next" width="30" height="50" />
-						</div>
-					</div>
-				</section>
-			</div>
-			<div class="bucket">
-				<h2 class="section__title"><a href="#" class="section__link">Для міні-навантажувачів</a></h2>
-				<section>
-					<div class="swiper swiper__product mySwiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-01</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-02</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-03</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-04</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-05</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<img src="img/arow-prev.svg" alt="prev" width="30" height="50" />
-						</div>
-						<div class="swiper-button-next">
-							<img src="img/arow-next.svg" alt="next" width="30" height="50" />
-						</div>
-					</div>
-				</section>
-			</div>
-			<div class="bucket">
-				<h2 class="section__title"><a href="#" class="section__link">Для тракторів</a></h2>
-				<section>
-					<div class="swiper swiper__product mySwiper">
-						<div class="swiper-wrapper">
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-01</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-02</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-03</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-04</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-							<div class="swiper-slide">
-								<article class="product__card">
-									<div class="product__card-container">
-										<div class="product__img">
-											<img src="img/mo-2/mo-1.1.png" alt="" width="100">
-										</div>
-										<div class="product__content">
-											<p class="product__name">Ківш зерновий</p>
-											<p class="product__code">KVSH-05</p>
-											<p class="product__price">51 600 ₴</p>
-										</div>
-										<a href="SM-01.html" class="product__link"></a>
-								</article>
-							</div>
-						</div>
-						<div class="swiper-button-prev">
-							<img src="img/arow-prev.svg" alt="prev" width="30" height="50" />
-						</div>
-						<div class="swiper-button-next">
-							<img src="img/arow-next.svg" alt="next" width="30" height="50" />
-						</div>
-					</div>
-				</section>
-			</div>
-		</div>
 	</main>
 	<footer class="footer">
 		<div class="footer__bootom">
@@ -592,6 +260,12 @@
 							</li>
 							<li class="info__item">
 								<a class="info__link" href="contacts.html" data-lang="footer_page-4"></a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="news.html" data-lang="footer_page-15"></a>
+							</li>
+							<li class="info__item">
+								<a class="info__link" href="product.html" data-lang="footer_page-16"></a>
 							</li>
 
 						</ul>
@@ -614,6 +288,9 @@
 							<li class="info__item">
 								<a href="locksmith.html" class="info__link" data-lang="footer_page-10"></a>
 							</li>
+							<li class="info__item">
+								<a href="mechanical-processing.html" class="info__link" data-lang="footer_page-17"></a>
+							</li>
 						</ul>
 					</div>
 					<div class="info__block info__address">
@@ -621,7 +298,7 @@
 						<ul class="info__list">
 							<li class="info__item">
 								<a href="https://www.google.com/maps?ll=50.83233,25.453636&z=18&t=m&hl=uk&gl=UA&mapclient=embed&cid=4530451728570446602"
-									class="link-social link--hover" data-lang="footer_page-12">
+									class="link-social link--hover" data-lang="footer_page-12" target="_blank" rel="noopener noreferrer">
 
 								</a>
 								<svg class="link-social--svg" width="30" height="30">
@@ -666,11 +343,21 @@
 								</a>
 							</li>
 							<li class="info__item">
-								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover">
+								<a href="https://www.facebook.com/armaxMG" class="link-social link--hover" target="_blank"
+									rel="noopener noreferrer">
 									<svg class="link-social--svg" width="30" height="20">
 										<use xlink:href="#facebook"></use>
 									</svg>
 									facebook.com/armaxMG/
+								</a>
+							</li>
+							<li class="info__item">
+								<a href="https://www.instagram.com/armax.mg?igsh=aWJ0ZnE2MGkxNThj" class="link-social link--hover"
+									target="_blank" rel="noopener noreferrer">
+									<svg class="link-social--svg" width="25" height="25">
+										<use xlink:href="#instagram"></use>
+									</svg>
+									instagram.com/armax.mg
 								</a>
 							</li>
 						</ul>
@@ -680,15 +367,8 @@
 		</div>
 	</footer>
 	<script src="js/lang.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
 	<script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 	<script src="js/index.js"></script>
-
-	<script src="js/swiper.js"></script>
-
-	<script src="js/fslightbox.js"></script>
-
-	<script src="https://kit.fontawesome.com/fce9a50d02.js" crossorigin="anonymous"></script>
 	<script src="js/app.js"></script>
 </body>
 
