--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
   <meta name="author" content="ArmaxMG" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://armax-mg.com.ua/" />
+  <script>
+    // Set base href for GitHub Pages
+    if (window.location.hostname === 'dmytrostychuk.github.io') {
+      var base = document.createElement('base');
+      base.href = 'https://dmytrostychuk.github.io/Armax/';
+      document.head.insertBefore(base, document.head.firstChild);
+    }
+  </script>
   <link rel="stylesheet" href="styles/style-min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
