--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta name="author" content="ArmaxMG" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://armax-mg.com.ua/" />
-  <base href="/Armax/" />
+  <base href="https://dmytrostychuk.github.io/Armax/" />
   <link rel="stylesheet" href="styles/style-min.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
